feature(index) add github, favicon

--- a/catstep.css
+++ b/catstep.css
@@ -3,3 +3,10 @@
     height: 200px;
     position: relative;
 }
+
+.github-ribbon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+}
